[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/dice/attack_01.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Kenney Mini Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/upgrade_option.png" type="Texture" id=3]
[ext_resource path="res://Sprites/battle_bg.png" type="Texture" id=4]
[ext_resource path="res://Scripts/UpgradePicker.gd" type="Script" id=5]
[ext_resource path="res://Sprites/cursor.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[node name="UpgradePicker" type="Node2D"]
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="bg" type="NinePatchRect" parent="."]
margin_left = -128.0
margin_top = -80.0
margin_right = 128.0
margin_bottom = 89.0
texture = ExtResource( 4 )
patch_margin_left = 10
patch_margin_top = 20
patch_margin_right = 10
patch_margin_bottom = 20

[node name="Title" type="Label" parent="."]
margin_left = -80.0
margin_top = -72.0
margin_right = 78.0
margin_bottom = -52.0
custom_colors/font_color = Color( 0.14902, 0.168627, 0.270588, 1 )
custom_fonts/font = SubResource( 1 )
text = "Choose an Upgrade"

[node name="Options" type="Control" parent="."]
margin_left = -112.0
margin_top = -40.0
margin_right = 112.0
margin_bottom = 80.0

[node name="Option0" type="NinePatchRect" parent="Options"]
margin_right = 64.0
margin_bottom = 120.0
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 20
patch_margin_right = 10
patch_margin_bottom = 20

[node name="Icon" type="Sprite" parent="Options/Option0"]
position = Vector2( 32, 32 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Description" type="Label" parent="Options/Option0"]
margin_left = 8.0
margin_top = 64.0
margin_right = 56.0
margin_bottom = 87.0
rect_pivot_offset = Vector2( 24, 12 )
custom_colors/font_color = Color( 0.14902, 0.168627, 0.270588, 1 )
custom_fonts/font = SubResource( 2 )
text = "add a crit option in your dice"
align = 1
autowrap = true

[node name="Cursor" type="Sprite" parent="Options/Option0"]
visible = false
position = Vector2( 60, 120 )
texture = ExtResource( 6 )

[node name="Option1" type="NinePatchRect" parent="Options"]
margin_left = 80.0
margin_right = 144.0
margin_bottom = 120.0
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 20
patch_margin_right = 10
patch_margin_bottom = 20

[node name="Icon" type="Sprite" parent="Options/Option1"]
position = Vector2( 32, 32 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Description" type="Label" parent="Options/Option1"]
margin_left = 8.0
margin_top = 64.0
margin_right = 56.0
margin_bottom = 87.0
rect_pivot_offset = Vector2( 24, 12 )
custom_colors/font_color = Color( 0.14902, 0.168627, 0.270588, 1 )
custom_fonts/font = SubResource( 2 )
text = "add a crit option in your dice"
align = 1
autowrap = true

[node name="Cursor" type="Sprite" parent="Options/Option1"]
visible = false
position = Vector2( 60, 120 )
texture = ExtResource( 6 )

[node name="Option2" type="NinePatchRect" parent="Options"]
margin_left = 160.0
margin_right = 224.0
margin_bottom = 120.0
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 20
patch_margin_right = 10
patch_margin_bottom = 20

[node name="Icon" type="Sprite" parent="Options/Option2"]
position = Vector2( 32, 32 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Description" type="Label" parent="Options/Option2"]
margin_left = 8.0
margin_top = 64.0
margin_right = 56.0
margin_bottom = 87.0
rect_pivot_offset = Vector2( 24, 12 )
custom_colors/font_color = Color( 0.14902, 0.168627, 0.270588, 1 )
custom_fonts/font = SubResource( 2 )
text = "add a crit option in your dice"
align = 1
autowrap = true

[node name="Cursor" type="Sprite" parent="Options/Option2"]
visible = false
position = Vector2( 60, 120 )
texture = ExtResource( 6 )
